--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react95/clippy": "^1.0.10",
+    "@react95/core": "^6.1.1",
     "@supabase/supabase-js": "^1.35.2",
+    "@types/styled-components": "^5.1.26",
     "@types/tailwindcss": "^3.0.10",
+    "@types/xstyled__styled-components": "^1.19.3",
     "framer-motion": "^10.12.12",
     "next": "^13.4.2",
     "next-themes": "^0.1.1",
@@ -21,7 +25,11 @@
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "file-loader": "^6.2.0",
+    "next-fonts": "^1.5.1",
+    "next-transpile-modules": "^10.0.0",
     "postcss": "^8.4.5",
+    "postcss-nesting": "^12.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "tailwindcss": "^3.0.7",
