feat: typewritter added for title

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-responsive-carousel": "^3.2.23",
+    "typewriter-effect": "^2.20.1",
     "yet-another-react-lightbox": "^3.10.0"
   },
   "devDependencies": {
