--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.13.5",
-    "@react95/clippy": "^1.0.10",
     "@react95/core": "^6.1.1",
     "@supabase/supabase-js": "^1.35.2",
     "@types/styled-components": "^5.1.26",
@@ -23,6 +22,7 @@
     "react-responsive-carousel": "^3.2.23",
     "three": "^0.154.0",
     "typewriter-effect": "^2.20.1",
+    "webamp": "^1.5.0",
     "yet-another-react-lightbox": "^3.10.0"
   },
   "devDependencies": {
