--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@supabase/supabase-js": "^1.35.2",
     "@types/styled-components": "^5.1.26",
     "@types/tailwindcss": "^3.0.10",
+    "@types/three": "^0.155.0",
     "@types/xstyled__styled-components": "^1.19.3",
     "framer-motion": "^10.12.12",
     "gltfjsx": "^6.2.10",
