--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-responsive-carousel": "^3.2.23",
+    "styled-components": "^6.0.7",
     "three": "^0.154.0",
     "typewriter-effect": "^2.20.1",
     "webamp": "^1.5.0",
